# boids

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
src/: application.cpp  application.h  boids.cpp  boids.h  main.cpp
src/math/: vec2.h
